[gd_scene load_steps=3 format=3 uid="uid://ud3p25n6he7k"]

[ext_resource type="Script" path="res://levels/scripts/main.gd" id="1_f3d82"]
[ext_resource type="Theme" uid="uid://cwmfdb8lx88dd" path="res://assets/themes/default_theme.tres" id="1_wy3ps"]

[node name="Main" type="Node"]
script = ExtResource("1_f3d82")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1032.0
offset_top = 602.0
offset_right = -1032.0
offset_bottom = -601.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wy3ps")

[node name="MarginContainer" type="MarginContainer" parent="Menu/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_wy3ps")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_wy3ps")
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wy3ps")
text = "Movement shooter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SingleButton" type="Button" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wy3ps")
text = "Singleplayer"

[node name="HostButton" type="Button" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wy3ps")
text = "Host"

[node name="JoinButton" type="Button" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wy3ps")
text = "Join"

[node name="IPEntry" type="LineEdit" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wy3ps")
placeholder_text = "IP"
alignment = 1

[node name="ExitButton" type="Button" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Exit
"

[node name="SceneContainer" type="Node" parent="."]

[connection signal="pressed" from="Menu/PanelContainer/MarginContainer/VBoxContainer/SingleButton" to="." method="_on_single_button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
